Create replicas from GeoNet and AWS Instances
Modifies the /api/replicas/ endpoint to allow the creation of replicas
from GeoNet. Creates a One-to-One relationship between a new AWSInstance
model and the Replica model to store extra AWS information such as the
instance ID, so that details about the instance can be looked up on
demand.

--- a/templates/site/replica_list.html
+++ b/templates/site/replica_list.html
@@ -63,7 +63,7 @@
             <tr>
               <th class="text-center">Status</th>
               <th class="text-center">PID</th>
-              <th>Hostname</th>
+              <th>Name</th>
               <th>Endpoint</th>
               <th>Location</th>
               <th>Last Seen</th>
@@ -80,11 +80,9 @@
               </td>
               <td class="text-center">{{ replica.precedence }}</td>
               <td>
-                <a href="{{ replica.get_absolute_url }}">
-                  {% if replica.hostname %}{{ replica.hostname }}{% else %}{{ replica.name }}{% endif %}
-                </a>
+                <a href="{{ replica.get_absolute_url }}">{{ replica.name }}</a>
               </td>
-              <td><code>{{ replica.ip_address }}:{{ replica.port }}</code></td>
+              <td><code>{{ replica.address }}</code></td>
               <td>{{ replica.location.location }}</td>
               <td>{{ replica.last_seen|naturaltime }}</td>
             </tr>
