--- a/templates/site/geonet.html
+++ b/templates/site/geonet.html
@@ -13,6 +13,68 @@
 {% endblock %}
 
 {% block dashboard %}
+  <!-- status cards -->
+  <div class="row">
+
+    <!-- replicas under management -->
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-dark o-hidden h-100">
+        <div class="card-body">
+          <div class="card-body-icon">
+            <i class="fa fa-fw fa-cubes"></i>
+          </div>
+          <div class="mr-5">
+            {{ num_instances }} Instances
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- running instances -->
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-success o-hidden h-100">
+        <div class="card-body">
+          <div class="card-body-icon">
+            <i class="fa fa-fw fa-play-circle-o"></i>
+          </div>
+          <div class="mr-5">
+            {{ states.running }} Running
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- pending instances -->
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-info o-hidden h-100">
+        <div class="card-body">
+          <div class="card-body-icon">
+            <i class="fa fa-fw fa-refresh"></i>
+          </div>
+          <div class="mr-5">
+            {{ states.pending }} Pending
+          </div>
+        </div>
+        </a>
+      </div>
+    </div>
+
+    <!-- stopped instances -->
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-danger o-hidden h-100">
+        <div class="card-body">
+          <div class="card-body-icon">
+            <i class="fa fa-fw fa-stop-circle-o"></i>
+          </div>
+          <div class="mr-5">
+            {{ states.stopped }} Stopped
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div><!-- end status cards -->
+
   <div class="card mb-3">
     <div class="card-header">
       <i class="fa fa-amazon"></i> AWS Instances</div>
